<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="16dp"
        android:gravity="center"
        android:id="@+id/titleRegistro"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/nombre"
                    android:padding="16dp"
                    android:textSize="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/nombreAdultoRegistro"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/nombreNinfasRegistro"
                    android:textSize="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/total"
                    android:padding="16dp"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/totalAdultos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/totalNinfas"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/maximo"
                    android:padding="16dp"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/maxAdultos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/maxNinfas"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="16dp"
                    android:text="@string/minimo"
                    android:textSize="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/minAdultos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/minNinfas"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/promedio"
                    android:padding="16dp"
                    android:textSize="16dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/promAdultos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:id="@+id/promNinfas"/>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>